--- a/test-output/old/WalmartProject/methods.html
+++ b/test-output/old/WalmartProject/methods.html
@@ -1,20 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>WalmartProject</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e49b60">  <td>21/02/05 10:03:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AddressTest.setup()[pri:0, instance:com.walmart.testcases.AddressTest@68702e03]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@507911745</td>   <td></td> </tr>
-<tr bgcolor="8d65a2">  <td>21/02/05 10:03:46</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginpagetest.loginpageTitleTest()[pri:1, instance:com.walmart.testcases.Loginpagetest@5be46f9d]">loginpageTitleTest</td> 
-  <td>main@507911745</td>   <td></td> </tr>
-<tr bgcolor="77dd67">  <td>21/02/05 10:03:46</td>   <td>65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountTest.myaccountpageTitleTest()[pri:1, instance:com.walmart.testcases.MyAccountTest@3f91b517]">myaccountpageTitleTest</td> 
-  <td>main@507911745</td>   <td></td> </tr>
-<tr bgcolor="e49b60">  <td>21/02/05 10:03:46</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddressTest.AddressTitleTest()[pri:1, instance:com.walmart.testcases.AddressTest@68702e03]">AddressTitleTest</td> 
-  <td>main@507911745</td>   <td></td> </tr>
-<tr bgcolor="91b28b">  <td>21/02/05 10:03:46</td>   <td>72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MylistTest.MylistpageTitleTest()[pri:1, instance:com.walmart.testcases.MylistTest@7a220c9a]">MylistpageTitleTest</td> 
-  <td>main@507911745</td>   <td></td> </tr>
-<tr bgcolor="74b68c">  <td>21/02/05 10:03:46</td>   <td>77</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyrecommendationpageTest.myrecommendationpageTitleTest()[pri:1, instance:com.walmart.testcases.MyrecommendationpageTest@2421cc4]">myrecommendationpageTitleTest</td> 
-  <td>main@507911745</td>   <td></td> </tr>
-<tr bgcolor="e7a160">  <td>21/02/05 10:03:46</td>   <td>83</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.PersonalsettingpageTitleTest()[pri:1, instance:com.walmart.testcases.PersonalsettingTest@30c93896]">PersonalsettingpageTitleTest</td> 
-  <td>main@507911745</td>   <td></td> </tr>
-<tr bgcolor="8766a7">  <td>21/02/05 10:03:46</td>   <td>88</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.SearchpageTitleTest()[pri:1, instance:com.walmart.testcases.SearchTest@59a008ba]">SearchpageTitleTest</td> 
-  <td>main@507911745</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:28:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;PersonalsettingTest.setup()[pri:0, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="a67284">  <td>21/02/08 17:29:22</td>   <td>27617</td> <td>&nbsp;</td><td title="&gt;&gt;SearchTest.setup()[pri:0, instance:com.walmart.testcases.SearchTest@3e6104fc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="a67284">  <td>21/02/08 17:29:28</td>   <td>33990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.SearchpageTitleTest()[pri:1, instance:com.walmart.testcases.SearchTest@3e6104fc]">SearchpageTitleTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:29:28</td>   <td>34011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.PersonalsettingpageTitleTest()[pri:1, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">PersonalsettingpageTitleTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="a67284">  <td>21/02/08 17:29:39</td>   <td>44612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.SearchpageTest()[pri:2, instance:com.walmart.testcases.SearchTest@3e6104fc]">SearchpageTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:29:50</td>   <td>55158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.PersonalsettingpageLogoTest()[pri:2, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">PersonalsettingpageLogoTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="a67284">  <td>21/02/08 17:30:00</td>   <td>65695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.checkoutpageTest()[pri:3, instance:com.walmart.testcases.SearchTest@3e6104fc]">checkoutpageTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:30:00</td>   <td>65699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.PersonalinfoTest()[pri:3, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">PersonalinfoTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:30:11</td>   <td>76231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.emailTest()[pri:4, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">emailTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:30:21</td>   <td>86724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.passwordTest()[pri:5, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">passwordTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:30:32</td>   <td>97296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.languageTest()[pri:6, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">languageTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:30:42</td>   <td>107850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalsettingTest.wincardTest()[pri:7, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">wincardTest</td> 
+  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="6f9f88">  <td>21/02/08 17:30:53</td>   <td>118406</td> <td>&nbsp;</td><td title="&lt;&lt;PersonalsettingTest.teardown()[pri:0, instance:com.walmart.testcases.PersonalsettingTest@12359a82]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
+<tr bgcolor="a67284">  <td>21/02/08 17:30:55</td>   <td>120528</td> <td>&nbsp;</td><td title="&lt;&lt;SearchTest.teardown()[pri:0, instance:com.walmart.testcases.SearchTest@3e6104fc]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1825419935</td>   <td></td> </tr>
 </table>
